@@ -1,4 +1,8 @@
-$Id: ChangeLog,v 1.158 2005/06/20 10:06:27 bkc_alpha Exp $
+$Id: ChangeLog,v 1.159 2005/06/21 20:05:16 bifimsx Exp $
+
+2005-06-22 BouKiCHi
+    * Fixed GTTRIG to get status of space when Reg.A is above 4.
+    * Implemented multiply of BASIC statements temporarily.
 
 2005-06-21 Albert Beevendorp
     * fixed a bug in the clock chip access routines
